feat: adiciona botão para comentarios e ajuste css

--- a/src/EclipseWorks.Ui/src/app/RouterOutlet/layout/layout.component.html
+++ b/src/EclipseWorks.Ui/src/app/RouterOutlet/layout/layout.component.html
@@ -1,4 +1,4 @@
-<header>
+<header class="layout-header">
     <mat-toolbar color="primary">
       <span class="app-title">EclipseWorks</span>
       <span class="spacer"></span>
@@ -11,7 +11,7 @@
 <router-outlet></router-outlet>
 </main>
 
-<footer>
+<footer class="layout-footer">
 <mat-toolbar color="primary">© 2025 - Todos os direitos reservados</mat-toolbar>
 </footer>
   
