--- a/src/EclipseWorks.Ui/src/app/pages/project/project.component.html
+++ b/src/EclipseWorks.Ui/src/app/pages/project/project.component.html
@@ -1,16 +1,14 @@
 <mat-drawer-container class="drawer-container">
-  
-  <!-- Drawer lateral com detalhes da tarefa -->
-  <mat-drawer #drawer mode="side" position="end" [(opened)]="isDrawerOpen">
+  <!-- <mat-drawer #drawer mode="side" position="end" [(opened)]="isDrawerOpen">
     <h2>Detalhes da Tarefa</h2>
     <p><strong>Título:</strong> {{ selectedTask?.title }}</p>
     <p><strong>Descrição:</strong> {{ selectedTask?.description }}</p>
     <p><strong>Status:</strong> {{ selectedTask?.status }}</p>
     <p><strong>Prioridade:</strong> {{ selectedTask?.priority }}</p>
     <button mat-button (click)="closeDrawer()">Fechar</button>
-  </mat-drawer>
-
-<div class="container">
+  </mat-drawer> -->
+  <app-task-drawer [(opened)]="isDrawerOpen" (onClose)="closeDrawer()" [task]="selectedTask"></app-task-drawer>
+<div class="main-content container">
     <div class="header">
       <h1>Tarefas do projeto {{project?.name}}</h1>
       <button mat-flat-button color="primary" (click)="createTask()">
@@ -56,4 +54,4 @@
       </div> 
     </div>
   </div>
-  
+</mat-drawer-container>
