feat: adiciona relatorio de tarefas atrasadas por usuário

--- a/src/TaskManager.Ui/src/app/pages/report/reports/delayed/delayed.component.html
+++ b/src/TaskManager.Ui/src/app/pages/report/reports/delayed/delayed.component.html
@@ -1,1 +1,8 @@
-<p>delayed works!</p>
+<mat-card class="delayed-report-card">
+    <mat-card-title>Tarefas atrasadas por usuário</mat-card-title>
+    <mat-card-content>
+      <div id="barChart" style="width: 100%; height: 600px; border: none; padding: 10px;"></div>
+      <p style="margin-top: 1rem;"><strong>Média:</strong> {{ report?.average }}</p>
+    </mat-card-content>
+  </mat-card>
+  
