--- a/src/TaskManager.Ui/src/app/RouterOutlet/layout/components/notification-menu/notification-menu.component.html
+++ b/src/TaskManager.Ui/src/app/RouterOutlet/layout/components/notification-menu/notification-menu.component.html
@@ -1,39 +1,50 @@
-<button
-  mat-icon-button
-  [matMenuTriggerFor]="notificationsMenu"
-  #notificationTrigger="matMenuTrigger"
->
-  
+<button mat-icon-button [matMenuTriggerFor]="notificationsMenu" #notificationTrigger="matMenuTrigger">
+
   <mat-icon *ngIf="notReadNotifications.length > 0" [matBadge]="notReadNotifications.length">notifications</mat-icon>
   <mat-icon *ngIf="notReadNotifications.length == 0">notifications</mat-icon>
 </button>
 
 <mat-menu #notificationsMenu="matMenu" [overlapTrigger]="false" [hasBackdrop]="true">
   <ng-template matMenuContent>
-    <div class="notification-section">
-      <h4>Não Lidas</h4>
-      <mat-divider></mat-divider>
-      <ng-container *ngFor="let notification of notReadNotifications">
-        <div
-          class="notification-item"
-          style="cursor: pointer; padding: 8px;"
-          (click)="markAsRead(notification, $event)"
-        >
-          <div class="notification-text">{{ notification.value }}</div>
-          <div class="notification-time">{{ notification.createdAt | timeAgo }}</div>
-        </div>
-      </ng-container>
+    <div (click)="$event.stopPropagation()">
+      <h4 class="notification-header">Notificações</h4>
+      <mat-tab-group>
+        <mat-tab label="Tudo">
+          <div class="notification-section">
+            <ng-container *ngFor="let notification of allNotifications">
+              <div class="notification-item" [ngStyle]="{
+              'background-color': !notification.read ? '#e3f2fd' : '',
+              'font-weight': !notification.read ? 'bold' : 'normal',
+              'cursor':  !notification.read ? 'pointer' : 'default',
+              'padding': '8px'
+              }" (click)="!notification.read ? markAsRead(notification, $event) : null">
+                <div class="notification-text" [ngStyle]="{
+                'color': !notification.read ? 'black' : 'white',
+              }">{{ notification.value }}</div>
+                <div class="notification-time">{{ notification.createdAt | timeAgo }}</div>
+              </div>
+            </ng-container>
+          </div>
+        </mat-tab>
+        <mat-tab label="Não lidas">
+          <div class="notification-section">
+            <ng-container *ngFor="let notification of notReadNotifications">
+              <div class="notification-item" [ngStyle]="{
+              'background-color': !notification.read ? '#e3f2fd' : '',
+              'font-weight': !notification.read ? 'bold' : 'normal',
+              'cursor':  !notification.read ? 'pointer' : 'default',
+              'padding': '8px'
+              }" (click)="!notification.read ? markAsRead(notification, $event) : null">
+                <div class="notification-text" [ngStyle]="{
+                'color': !notification.read ? 'black' : 'white',
+              }">{{ notification.value }}</div>
+                <div class="notification-time">{{ notification.createdAt | timeAgo }}</div>
+              </div>
+            </ng-container>
+          </div>
+        </mat-tab>
+      </mat-tab-group>
     </div>
 
-    <div class="notification-section">
-      <h4>Tudo</h4>
-      <mat-divider></mat-divider>
-      <ng-container *ngFor="let notification of allNotifications">
-        <div class="notification-item" style="padding: 8px;">
-          <div class="notification-text">{{ notification.value }}</div>
-          <div class="notification-time">{{ notification.createdAt | timeAgo }}</div>
-        </div>
-      </ng-container>
-    </div>
   </ng-template>
 </mat-menu>
