--- a/src/TaskManager.Ui/src/app/RouterOutlet/layout/layout.component.html
+++ b/src/TaskManager.Ui/src/app/RouterOutlet/layout/layout.component.html
@@ -1,30 +1,15 @@
 <header class="layout-header">
-    <mat-toolbar color="primary">
-      <span class="app-title">Gerenciador de tarefas</span>
-      <span class="spacer"></span>
-      <!-- Notificações -->
-      <app-notification-menu></app-notification-menu>
-
-      <!-- Configurações -->
-      <button mat-button [matMenuTriggerFor]="settings">
-        <mat-icon>
-          settings
-      </mat-icon>
-    </button>
-      <mat-menu #settings="matMenu">
-        <button mat-menu-item color="primary" *ngIf="isManager()" [routerLink]="['/report']">Relatórios</button>
-        <button mat-menu-item color="accent" (click)="logout()">Sair</button>
-      </mat-menu>
-
-    </mat-toolbar>
+  <mat-toolbar color="primary">
+    <span class="app-title">Gerenciador de tarefas</span>
+    <span class="spacer"></span>
+    <app-notification-menu></app-notification-menu>
+    <app-settings-menu></app-settings-menu>
+  </mat-toolbar>
 </header>
-
 <app-breadcrumb></app-breadcrumb>
 <main class="content">
-<router-outlet></router-outlet>
+  <router-outlet></router-outlet>
 </main>
-
 <footer class="layout-footer">
-<mat-toolbar color="primary">© 2025 - Todos os direitos reservados</mat-toolbar>
+  <mat-toolbar color="primary">© 2025 - Todos os direitos reservados</mat-toolbar>
 </footer>
-  
