--- a/src/TaskManager.Ui/src/app/RouterOutlet/layout/components/notification-menu/notification-menu.component.scss
+++ b/src/TaskManager.Ui/src/app/RouterOutlet/layout/components/notification-menu/notification-menu.component.scss
@@ -1,6 +1,8 @@
 ::ng-deep .notifications-menu {
   width: 300px;
   padding: 10px 15px;
+  min-width: 280px !important;
+
 }
 
 .notification-section {
