--- a/src/TaskManager.Ui/src/app/pages/project/components/task-drawer/task-drawer.component.html
+++ b/src/TaskManager.Ui/src/app/pages/project/components/task-drawer/task-drawer.component.html
@@ -27,7 +27,8 @@
 
       <div *ngIf="task.comments.length === 0">Nenhum comentário ainda.</div>
       <div *ngFor="let comment of task.comments" class="comment">
-        <p [innerHTML]="formatTextToHtmlWithLink(comment.value)"></p>
+        <p [innerHTML]="formatTextToHtmlWithLink(comment.value)">
+        </p>
       </div>
 
       <div *ngIf="!isAddingComment">
