--- a/src/TaskManager.Ui/src/app/pages/project/components/task-drawer/task-drawer.component.scss
+++ b/src/TaskManager.Ui/src/app/pages/project/components/task-drawer/task-drawer.component.scss
@@ -1,94 +1,97 @@
 .task-drawer-container {
-    width: 420px;
-    padding: 0;
-    display: flex;
-    flex-direction: column;
-    height: 100%;
-  }
-  
-  .drawer-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 1.2rem 1.5rem;
-    border-bottom: 1px solid #e0e0e0;
-    background-color: #fafafa;
-  
-    h2 {
-      color: #444;
-      font-size: 1.5rem;
-      font-weight: 600;
-      margin: 0;
-    }
-  }
-  
-  .drawer-body {
-    padding: 1.5rem;
-    overflow-y: auto;
-    flex: 1;
-  }
-  
-  .task-meta {
-    display: flex;
-    align-items: center;
-    gap: 1rem;
-    margin-bottom: 1.5rem;
-  
-    .task-status {
-      font-size: 0.95rem;
-      color: #666;
-    }
-  }
-  
-  .task-section {
-    margin-bottom: 1rem;
-  
-    h3 {
-      margin-bottom: 0.5rem;
-      font-size: 1.1rem;
-      font-weight: 500;
-      color: #444;
-    }
-  
-    .description {
-      white-space: pre-wrap;
-    }
-  
-    .comment-card {
-      padding: 0.75rem 1rem;
-      margin-bottom: 1rem;
-      font-size: 0.95rem;
-      background-color: #f4f4f4;
-  
-      .comment-date {
-        font-size: 0.75rem;
-        color: #999;
-        display: block;
-        margin-top: 0.25rem;
-      }
-    }
-  
-    .no-comments {
-      font-style: italic;
-      color: #888;
-    }
+  width: 420px;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
 
-    .comment {
-      background: #f5f5f5;
-      padding: 0.5rem;
-      border-radius: 4px;
-      margin-bottom: 0.5rem;
-    }
-    
-    .full-width {
-      width: 100%;
-    }
-    
-    .comment-buttons {
-      margin-top: 0.5rem;
-      display: flex;
-      gap: 0.5rem;
+.drawer-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1.2rem 1.5rem;
+  border-bottom: 1px solid #e0e0e0;
+  background-color: #fafafa;
+
+  h2 {
+    color: #444;
+    font-size: 1.5rem;
+    font-weight: 600;
+    margin: 0;
+  }
+}
+
+.drawer-body {
+  padding: 1.5rem;
+  overflow-y: auto;
+  flex: 1;
+}
+
+.task-meta {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  margin-bottom: 1.5rem;
+
+  .task-status {
+    font-size: 0.95rem;
+    color: #666;
+  }
+}
+
+.task-section {
+  margin-bottom: 1rem;
+
+  h3 {
+    margin-bottom: 0.5rem;
+    font-size: 1.1rem;
+    font-weight: 500;
+    color: #444;
+  }
+
+  .description {
+    white-space: pre-wrap;
+  }
+
+  .comment-card {
+    padding: 0.75rem 1rem;
+    margin-bottom: 1rem;
+    font-size: 0.95rem;
+    background-color: #f4f4f4;
+
+    .comment-date {
+      font-size: 0.75rem;
+      color: #999;
+      display: block;
+      margin-top: 0.25rem;
     }
   }
-  
-  
+
+  .no-comments {
+    font-style: italic;
+    color: #888;
+  }
+
+  .comment {
+    background: #f5f5f5;
+    padding: 0.5rem;
+    border-radius: 4px;
+    margin-bottom: 0.5rem;
+
+    p {
+      margin: 0 0 0 !important;
+      color: black;
+    }
+  }
+
+  .full-width {
+    width: 100%;
+  }
+
+  .comment-buttons {
+    margin-top: 0.5rem;
+    display: flex;
+    gap: 0.5rem;
+  }
+}
