feat: adiciona click no header para voltar para pagina home

--- a/src/TaskManager.Ui/src/app/RouterOutlet/layout/layout.component.scss
+++ b/src/TaskManager.Ui/src/app/RouterOutlet/layout/layout.component.scss
@@ -1,24 +1,25 @@
 :host {
-    display: flex;
-    flex-direction: column;
-    height: 100vh;
-  }
-  
-  .layout-header, .layout-footer {
-    flex-shrink: 0;
-  }
-  
-  .content {
-    flex: 1;
-    padding: 1rem;
-    overflow-y: auto;
-  }
-  
-  .app-title {
-    font-weight: bold;
-  }
-  
-  .spacer {
-    flex: 1 1 auto;
-  }
-  
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+}
+
+.layout-header,
+.layout-footer {
+  flex-shrink: 0;
+}
+
+.content {
+  flex: 1;
+  padding: 1rem;
+  overflow-y: auto;
+}
+
+.app-title {
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.spacer {
+  flex: 1 1 auto;
+}
