--- a/src/TaskManager.Ui/src/app/RouterOutlet/layout/layout.component.html
+++ b/src/TaskManager.Ui/src/app/RouterOutlet/layout/layout.component.html
@@ -1,6 +1,6 @@
 <header class="layout-header">
   <mat-toolbar color="primary">
-    <span class="app-title">Gerenciador de tarefas</span>
+    <span class="app-title" [routerLink]="['/home']">Gerenciador de tarefas</span>
     <span class="spacer"></span>
     <app-notification-menu></app-notification-menu>
     <app-settings-menu></app-settings-menu>
